[package]
name = "jma_xml_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
serde = "1.0.130"
serde_derive = "1.0.130"
serde-xml-rs = "0.5.0"
chrono = { version = "0.4.19", features = ["serde"] }
